# er-effects-rs

./: .envrc  .gitignore  .gitmodules  .mcp.json  AGENTS.md  CLAUDE.md  Cargo.toml  HANDOFF-portrait-autoload-2026-06-30.md  README.md  build.rs  er-shader-viewer-renderdoc.cap
crates/er-ags-stub/: Cargo.toml
crates/er-ags-stub/src/: lib.rs
crates/er-armament-icons/: Cargo.toml
crates/er-armament-icons/src/: crash_trace.rs  gfx_equip_hook.rs  lib.rs
crates/er-better-refills-dll/: Cargo.toml
crates/er-better-refills-dll/src/: crashlog.rs  lib.rs
crates/er-cutscene-overlay-helper/: Cargo.toml
crates/er-cutscene-overlay-helper/src/: main.rs
crates/er-cutscene-replacer/: Cargo.toml  build.rs
crates/er-cutscene-replacer/src/: lib.rs
crates/er-effects-rs/: Cargo.toml  build.rs
crates/er-effects-rs/src/: config.rs  constants.rs  crashlog.rs  effects.rs  ffi.rs  hooks.rs  input_blocker.rs  lib.rs  mh.rs  telemetry.rs
crates/er-effects-rs/src/constants/: anti_debug.rs  autoload_state.rs  gaitem_restore.rs  loading_cover.rs  own_load_pump.rs  player_correctness.rs  portrait_camera.rs  portrait_lookat.rs  portrait_semaphores.rs  profile_render.rs  render_handoff.rs  return_title.rs  software_breakpoints.rs  stage2_menu_drive.rs  stats_panel_background.rs  stats_panel_text.rs  switch_liveness.rs  system_quit.rs  tpf_textures.rs
crates/er-effects-rs/src/crashlog/: module_resolution.rs  veh_exit_hooks.rs
crates/er-effects-rs/src/experiments/: can_move_probe.rs  gating.rs  gpu_readback.rs  input_block.rs  input_trace.rs  lifecycle.rs  mem.rs  menu_diag.rs  mod.rs  native_overlay.rs  present_overlay.rs  profiler.rs  save_picker.rs  save_redirect.rs  startup_hooks.rs  submit.rs  title.rs  trace.rs
crates/er-effects-rs/src/experiments/continue_load/: product_continue.rs  slot_resolution.rs
crates/er-effects-rs/src/experiments/gating/: env_flags.rs  runtime_modes.rs
crates/er-effects-rs/src/experiments/gpu_readback/: boot_progress.rs  cached_depth_readback.rs  depth_mask_upload.rs  overlay_composite.rs  portrait_overlay.rs  portrait_worker.rs  resource_readback.rs  save_picker_overlay.rs  stats_overlay.rs
crates/er-effects-rs/src/experiments/menu_diag/: live_loadgame_node.rs  menu_observation.rs
crates/er-effects-rs/src/experiments/mod/: own_stepper_idx6_memory.rs  product_core_own_stepper.rs
crates/er-effects-rs/src/experiments/own_load/: drive.rs  loaders.rs
crates/er-effects-rs/src/experiments/own_stepper/: bootstrap_drive.rs  load_steps.rs
crates/er-effects-rs/src/experiments/save_redirect/: file_ops.rs  path_hooks.rs
crates/er-effects-rs/src/experiments/startup_hooks/: dlstring_lookat_math.rs  gfx_loading_portrait.rs  layout_global_hooks.rs  loading_cover_save_slot.rs  lookat_bone_hooks.rs  lookat_stage_camera.rs  menu_sort_defaults.rs  profile_rows_system_quit_menu.rs  profile_table_gfx_files.rs  save_picker_menu.rs  save_swap_profile_table.rs  scaleform_descriptor_guard.rs  startup_modals_menu_cover.rs  stats_loading_text.rs  system_quit_dialog_handlers.rs  system_quit_hooks.rs  system_quit_ownership_repro.rs  system_quit_repro_guards.rs  title_resources_stats_text.rs  title_scaleform_msgbox.rs  (+1 more)
crates/er-effects-rs/src/telemetry/: runtime_oracles.rs  save_policy_logs.rs
crates/er-flver/: Cargo.toml
crates/er-flver/src/: error.rs  format.rs  layout.rs  lib.rs  mesh.rs  semantic.rs  vertex.rs
crates/er-game-base/: Cargo.toml
crates/er-game-base/src/: lib.rs  log.rs  mem.rs  rva.rs
crates/er-gfx/: Cargo.toml
crates/er-gfx/examples/: inspect.rs  make_05_010_stats.rs
crates/er-gfx/src/: edit.rs  equip_02_011.rs  lib.rs  options_02_040.rs  options_02_040_quit4_edits.rs  raster.rs  title_05_000.rs  title_05_000_edits.rs  title_05_001.rs  title_05_010.rs  title_05_010_edits.rs
crates/er-gfx/src/codec/: io.rs  movie.rs  shape.rs  tag_codes.rs  tests.rs  text.rs  types.rs  writer.rs
crates/er-gfx/tests/: enumerate_sprites.rs  equip_02_011.rs  options_02_040.rs  profile_stats.rs  roundtrip.rs  title_strip.rs
crates/er-gfx/tests/common/: mod.rs
crates/er-hook/: Cargo.toml  build.rs
crates/er-hook/src/: lib.rs
crates/er-input-harness-dll/: Cargo.toml  build.rs
crates/er-input-harness-dll/src/: drive.rs  game_mem.rs  input_inject.rs  input_scheduler.rs  lib.rs  log.rs  pad_inject.rs  title_scan.rs  union.rs  win32.rs
crates/er-inventory-sort-dll/: Cargo.toml
crates/er-inventory-sort-dll/src/: lib.rs
crates/er-net-effects-dll/: Cargo.toml
crates/er-net-effects-dll/src/: config.rs  crash_telemetry.rs  effects.rs  input_suppression.rs  lib.rs  log.rs  overlay_window.rs  present_overlay.rs  telemetry.rs
crates/er-objectkit/: Cargo.toml
crates/er-objectkit/examples/: dump_dxbc_chunks.rs  native_draw.rs  replay_capture.rs  survey_vpo_resources.rs
crates/er-objectkit/src/: bundle_resolve.rs  capture.rs  flver.rs  lib.rs  loader.rs  matbin.rs  material.rs  passthrough.rs  scene.rs  shaderbundle.rs  spirv_reflect.rs  texture.rs  trace.rs
crates/er-reload-trace-dll/: Cargo.toml  build.rs
crates/er-reload-trace-dll/src/: lib.rs
crates/er-shaderkit/: Cargo.toml
crates/er-shaderkit/examples/: inspect_spirv.rs  render_png.rs  survey_dir.rs  to_wgsl.rs  ubo_lavapipe_probe.rs
crates/er-shaderkit/src/: dxbc.rs  lib.rs  render.rs  spirv_patch.rs  translate.rs  validate.rs
crates/er-shaderkit/src/render/: core_pipeline.rs  wgsl_fill.rs
crates/er-shaderkit/tests/fixtures/: clean_room_cs.dxil  clean_room_cs.hlsl  triangle.frag  triangle.frag.spv  ubo_probe_ps.dxil  ubo_probe_ps.hlsl  ubo_probe_vs.dxil  ubo_probe_vs.hlsl
crates/er-telemetry/: Cargo.toml
crates/er-telemetry-dll/: Cargo.toml
crates/er-telemetry-dll/src/: lib.rs
crates/er-telemetry/src/: counters.rs  lib.rs
crates/er-tpf/: Cargo.toml
crates/er-tpf/src/: draw.rs  lib.rs
crates/er-tpf/src/lib_parts/: parser.rs  writer.rs
crates/erpx-rs/: Cargo.toml
crates/erpx-rs/src/: lib.rs
crates/mushroom-man-runtime/: Cargo.toml
crates/mushroom-man-runtime/src/: lib.rs
tools/er-shader-viewer/: Cargo.toml
tools/er-shader-viewer/src/: main.rs  object.rs
(+804 files in other folders)
