[workspace]
members = [
    ".",
    "crates/effects-data",
    "crates/er-gfx",
    "crates/er-safe-input",
    "crates/er-save-loader",
    "crates/er-tpf",
    "crates/erpx-rs",
    "crates/soulsformats",
    # Host-only shader subcrates (naga/wgpu/bevy). NOT depended on by the root
    # `er-effects-rs` cdylib, so `cargo xwin check` (which selects only the root
    # package) never cross-compiles them into the game DLL; built only when
    # targeted explicitly (`cargo check -p er-shaderkit ...`).
    "crates/er-shaderkit",
    "crates/er-flver",
    "crates/er-objectkit",
    "tools/er-param-inspect",
    "tools/bevy-shader-lab",
    "tools/er-shaderlab",
    "tools/er-shader-viewer",
]
resolver = "2"

[package]
name = "er-effects-rs"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
eldenring = { path = "../fromsoftware-rs/crates/eldenring" }
er-effects-data = { path = "crates/effects-data" }
er-save-loader = { path = "crates/er-save-loader" }
er-safe-input = { path = "crates/er-safe-input" }
# In-memory texture-payload builder: portrait pixels -> uncompressed R8G8B8A8 DDS -> TPF003 blob,
# fed to the game's in-memory TPF factory to replace the now-loading background. Pure-Rust, std-only.
er-tpf = { path = "crates/er-tpf" }
# GFX (Scaleform SWF-variant) codec + content-addressed tag edits: derives the stripped
# 05_000_title movie at runtime from the game's own in-memory vanilla bytes instead of embedding
# the full asset (er-effects-rs-h7x). Pure-Rust, std-only.
er-gfx = { path = "crates/er-gfx" }
# ERPX portrait-dump container (encode side): single source of truth for the debug RGBA dump format
# the look-at proof writes. Core-only (default-features off) so the DLL never pulls the host `png` dep.
erpx-rs = { path = "crates/erpx-rs", default-features = false }
fromsoftware-shared = { path = "../fromsoftware-rs/crates/shared" }
pelite = "0.10"
bitflags = "2"
# In-process x86-64 decoding (instruction lengths, prologue/pattern validation).
# Pure-Rust decoder used directly so the hand-rolled single-step/prologue logic in lib.rs
# can decode instead of hard-coding byte lengths. Lean feature set: decoder only, no
# formatters/encoder.
iced-x86 = { version = "1.21", default-features = false, features = ["std", "decoder"] }
# Boot profiler, Win32 process/window helpers, and MinHook target resolution.
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_System_Kernel",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemInformation",
    "Win32_Devices_HumanInterfaceDevice",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_SystemServices",
    # Hidden dummy window for the D3D12 Present-overlay swapchain: CreateSwapChainForComposition is
    # "Not implemented" under vkd3d/Wine, so we need a real HWND via CreateSwapChainForHwnd, which pulls
    # in WNDCLASSW's GDI handle types.
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    # Common file-open dialog lets System -> Quit -> Load Save Profiles pick a replacement SL2.
    "Win32_UI_Controls_Dialogs",
    # CreateEventW (fence-completion event for the D3D12 readback wait) is gated behind Win32_Security.
    "Win32_Security",
    # D3D12 readback of the live profile-portrait offscreen render target, so the now-loading
    # forge can display the real rendered character head instead of the placeholder checker.
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
] }

[build-dependencies]
cc = "1.0"
