[package]
name = "er-armament-icons"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "er_armament_icons"
crate-type = ["cdylib"]

# Standalone armament tile Ash-of-War badge DLL (bd er-effects-rs-pe98). Loaded as its
# own [[natives]] entry; feature toggles by profile inclusion. Intentionally isolated
# from the product DLL crate: no save/autoload/render product dependencies.
# er-hook provides the shared MinHook FFI for the tile-populate post-hook.
[dependencies]
er-hook = { path = "../er-hook" }
er-game-base = { path = "../er-game-base" }
# er-gfx is a foundational format crate (Scaleform GFx codec + content-addressed tag
# edits); depending on it keeps this crate isolated from the PRODUCT DLL while reusing
# the byte-exact GFX edit machinery for the runtime ArtsIcon template edit.
er-gfx = { path = "../er-gfx" }

[target.'cfg(windows)'.dependencies]
eldenring = { path = "../../../fromsoftware-rs/crates/eldenring" }
fromsoftware-shared = { path = "../../../fromsoftware-rs/crates/shared" }
