[package]
name = "er-cutscene-overlay-helper"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_Media_MediaFoundation",
  "Win32_System_Com",
  "Win32_System_LibraryLoader",
  "Win32_UI_WindowsAndMessaging",
] }
