[package]
name = "er-input-harness-dll"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "er_input_harness_dll"
crate-type = ["cdylib"]

# TITLE-ACTIVE drive: the self-drive runs from a CSTaskImp FrameBegin recurring task (fires at the
# title AND in-world), mirroring er-telemetry-dll, so the harness can drive the full native boot+reload
# (PRESS ANY BUTTON via the title accept byte, Continue, System->Quit->Continue). No MinHook trampoline
# is installed, so (unlike the old union anchor) there is no er-hook/MinHook dependency. Game-lib deps
# are windows-only (cfg(windows)) like er-telemetry-dll.
[target.'cfg(windows)'.dependencies]
eldenring = { path = "../../../fromsoftware-rs/crates/eldenring" }
fromsoftware-shared = { path = "../../../fromsoftware-rs/crates/shared" }
windows = { version = "0.62", features = [
  "Win32_Foundation",
  "Win32_System_SystemServices",
] }
