[package]
name = "er-input-harness-dll"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "er_input_harness_dll"
crate-type = ["cdylib"]

# The self-drive runs from a CSTaskImp FrameBegin task (title accept byte, Continue), PLUS a MinHook on
# FD4PadDevice::poll (0x1f6bad0) to inject the raw pad button/dpad snapshot the IN-WORLD menu reads
# (inputmgr+0x90 is OUTPUT, not input -- bd ROOTCAUSE-plus90-is-OUTPUT-not-input). er-hook provides the
# shared MinHook FFI for that pad-poll hook.
[dependencies]
er-hook = { path = "../er-hook" }

[target.'cfg(windows)'.dependencies]
eldenring = { path = "../../../fromsoftware-rs/crates/eldenring" }
fromsoftware-shared = { path = "../../../fromsoftware-rs/crates/shared" }
windows = { version = "0.62", features = [
  "Win32_Foundation",
  "Win32_System_SystemServices",
  # Title-owner scan (title_scan.rs): VirtualQuery + ReadProcessMemory over this process's own address
  # space to find the TITLE state machine's owner object and read its PAB/menu semaphores.
  "Win32_System_Memory",
  "Win32_System_Diagnostics_Debug",
] }
