[package]
name = "er-input-harness-dll"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "er_input_harness_dll"
crate-type = ["cdylib"]

# Shared MinHook FFI (compiles the vendored MinHook C once). This crate owns a PRIVATE MinHook
# instance for its standalone-fallback drive hook; it uses only the raw MH_* externs from er-hook.
[dependencies]
er-hook = { path = "../er-hook" }
