[package]
name = "er-net-effects-dll"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "er_net_effects_dll"
crate-type = ["cdylib"]

[target.'cfg(windows)'.dependencies]
eldenring = { path = "../../../fromsoftware-rs/crates/eldenring" }
fromsoftware-shared = { path = "../../../fromsoftware-rs/crates/shared" }
er-effects-data = { path = "../effects-data" }
er-hook = { path = "../er-hook" }
hudhook = { version = "0.9.2", default-features = false, features = ["dx12"] }
windows = { version = "0.62", features = [
  "Win32_Foundation",
  "Win32_Graphics_Direct3D",
  "Win32_Graphics_Direct3D12",
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Dxgi_Common",
  "Win32_Graphics_Gdi",
  "Win32_Security",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_Kernel",
  "Win32_System_LibraryLoader",
  "Win32_System_SystemServices",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging",
] }
