[package]
name = "er-reload-trace-dll"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "er_reload_trace_dll"
crate-type = ["cdylib"]

# Shared MinHook FFI (compiles the vendored MinHook C once; this crate uses only the raw MH_* externs
# for its standalone-fallback instance and otherwise routes through the product's union export).
[dependencies]
er-hook = { path = "../er-hook" }
